--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-.text-overlay { 
+.text-overlay {
     margin-top: 160px;
     position: absolute;
     top: 0;
@@ -9,26 +9,52 @@
     padding-left: 160px;
     font-size: 80px;
     font-family: arial;
+    text-shadow: 0px 10px 10px black;
 }
 
 .background-image {
     width: 100%;
 }
 
-.p{
+.p {
     width: 1400px;
     font-size: 20px;
     padding-left: 50px;
     text-align: justify;
 }
 
-#card{
+#card {
     display: flex;
     flex-direction: column;
+    gap: 20px;
 }
 
-.card{
+#card h1 {
+    text-align: center;
+    font-size: 50px;
+    font-family: sans-serif;
+}
+
+.card {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+}
+
+.card-0 {
+    border-radius: 15px;
+}
+
+.card h2 {
+    text-align: center;
+    font-family: arial;
+    margin-top: 0%;
+    padding-top: 10px;
+}
+
+.card-0:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s;
+    box-shadow: 0px 8px 8px black;
+    
 }
