--- a/pages/nav-foot.css
+++ b/pages/nav-foot.css
@@ -85,10 +85,11 @@ body {
 
     .navbar {
         width: 410px;
+        height: 170px;
         display: flex;
         flex-direction: row;
         justify-content: center;
-        gap: 50px;
+        gap: 30px;
         padding-left: 15px;
         padding-right: 10px;
         overflow-x: hidden;
@@ -97,9 +98,10 @@ body {
     .nav-links {
         display: flex;
         flex-direction: column;
-        gap: 10px;
+        gap: 8px;
         font-family: sans-serif;
-
+        width: 180px;
+        text-align: left;
     }
 
     .page {
@@ -296,7 +298,7 @@ p {
         gap: 20px;
     }
 
-    .logo-1 {
+    .footer-content .logo {
         display: none;
     }
 
