--- a/pages/freedom fighers/fighers.css
+++ b/pages/freedom fighers/fighers.css
@@ -47,3 +47,45 @@
     font-size: 18px;
     top: 2rem;
 }
+.slogan{
+    color: #fff;
+}
+.main-div{
+    display: flex;
+    padding: 15px;
+    justify-content: center;
+}
+.div-img{
+    height: 390px;
+    margin: 15px;
+    padding: 12px;
+    border-radius: 8px;
+    cursor: pointer;
+    
+}
+
+.info-div{
+    margin: 15px;
+    padding: 12px;
+    width: 650px;
+    font-family: sans-serif;
+    margin-top: 45px;
+    
+}
+.learn-more-button{
+    border: none;
+    padding: 4px;
+    width: 130px;
+    background-color: rgb(175, 175, 175);
+    border-radius: 4px;
+    
+}
+.learn-more-button:hover{
+    border-radius: 6px;
+    border: 1px solid rgb(110, 110, 110); 
+    box-shadow: 2px 5px 4px rgb(71, 71, 71);
+}
+.blue-color{
+    color: blue;
+    text-decoration: underline;
+}
