--- a/pages/ganesha.css
+++ b/pages/ganesha.css
@@ -46,3 +46,29 @@
        .btn:hover{
         background-color: black;
        }
+       @media (max-width: 768px){
+        .container{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+
+        }
+        img{
+            height: 150px;
+            width: 150px;
+        }
+        .head{
+            padding: 20px;
+            margin: 10px;
+            font-size: 10px;
+            text-align: center;
+        }
+        .container-1{
+            display: flex;
+            flex-direction: row;
+            gap: 10px;
+            align-items: center;
+            justify-content: center;
+       }
+    }
