--- a/pages/spiritualsouls.css
+++ b/pages/spiritualsouls.css
@@ -6,6 +6,7 @@
     padding-right: 300px;
     gap: 50px;
     padding-top: 100px;
+    padding-bottom: 50px;
 }
 
 .card-image {
@@ -14,7 +15,7 @@
 
 #card {
     text-align: justify;
-    padding-top: 100px;
+    padding-top: 70px;
 }
 
 .button {
